objects/Event_Price__c.object
<CustomObject>
    <description>Resource Types for the event	- Default event zero has all the default values
Admissions Ticket 	$0.75		- as soon as ticket is bought
Seats Ticket 		$1.00
Seminars 		$1.00
MatchLeads Buyers 	$50.00
MatchLeads Sellers 	$15.00
Booth 		$0.50
Items 		$0.25
Package		$0.00
LeadScan 	$50.00 / booth	 - as soon as ticket is bought
Scan Attendee $299.00 /badge	 - as soon as service is added
Kiosk 	  $499.00  /event	 - as soon as service is added
BoothMap       $499.00  /event	 - as soon as service is added</description>
    <fields>
        <fullName>Active_Flag__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active_Flag</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BL_Fee_Amount__c</fullName>
        <label>BL Fee Amount</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BL_Fee_Level__c</fullName>
        <description>Booth leads fee in amount of resource price</description>
        <label>BL Fee Level</label>
        <picklist>
            <picklistValues>
                <fullName>T - Ticket</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>E - Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B - Booth</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BL_Fee_Percentage__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Booth leads fee in percentage of total price</description>
        <label>BL Fee Percentage</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>BLN_Event__c</referenceTo>
        <relationshipName>Event_Price</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Eventdex_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Eventdex Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Item_Count__c</fullName>
        <label>Item Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Item_type__c</fullName>
        <label>Item type</label>
        <referenceTo>Item_Type__c</referenceTo>
        <relationshipName>Event_Price</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Max_bl_fee__c</fullName>
        <label>Max bl fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>BLN Event Price</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Event__c</columns>
        <columns>Item_type__c</columns>
        <columns>BL_Fee_Amount__c</columns>
        <columns>BL_Fee_Level__c</columns>
        <columns>BL_Fee_Percentage__c</columns>
        <columns>Active_Flag__c</columns>
        <columns>Max_bl_fee__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>EP-{000000}</displayFormat>
        <label>Event Price</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BLN Event Price</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>